Updating package details

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "basecamp",
   "version": "0.1.0",
-  "description": "Basecamp API wrapper for Node.js",
+  "description": "Basecamp API wrapper",
   "keywords": [
     "api",
     "wrapper",
@@ -18,6 +18,7 @@
     "url": "http://github.com/studiolift/node-basecamp.git"
   },
   "dependencies": {
+    "xml2js" : ">=0.1.8"
   },
   "engines" : { "node" : ">=0.4.7" },
 }
